--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "flickity": "^2.0.10",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9"
   }
