--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "postcss-loader": "^2.0.9",
     "postcss-scss": "^1.0.2",
     "precss": "^2.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "reload-html-webpack-plugin": "^0.1.2",
     "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
