--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "build": "webpack-dev-server",
-    "deploy": "webpack -p"
+    "deploy": "webpack -p",
+    "buildout": "webpack-dev-server --port 3000 --hot --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
